<resources>
    <string name="app_name">Mini Player</string>

    <string name="transition_name_title" translatable="false">title</string>
    <string name="transition_name_cover" translatable="false">cover</string>
    <string name="transition_name_time" translatable="false">time</string>
    <string name="transition_name_duration" translatable="false">duration</string>
    <string name="transition_name_progress" translatable="false">progress</string>
    <string name="transition_name_fab" translatable="false">fab</string>
    <string name="play_vector_path" translatable="false">M6,5 l12,7 l0,0 l-12,0z M6,12 l12,0 l0,0 l-12,7z</string>
    <string name="pause_vector_path" translatable="false">M5,6 l14,0 l0,4 l-14,0z M5,14 l14,0 l0,4 l-14,0z</string>
    <string name="cancel" translatable="false">取消</string>
    <string name="ok" translatable="false">确认</string>
    <!--新版登录专用-->
    <string name="login">登录</string>
    <string name="login_input_username_hint">用户名</string>
    <string name="hint_password">密码</string>
    <string name="login_hold_hint">自动登录</string>
    <string name="login_forget_hint">忘记密码？</string>
    <string name="login_register_hint">注册</string>
    <string name="login_other_hint">其他方式登录</string>
    <string name="register_input_username_hint">手机号</string>
    <string name="register_username_hint">用户名</string>
    <string name="register_sms_auth_code">短信验证码</string>
    <string name="register_sms_hint">获取验证码</string>
    <string name="register_sms_wait_hint">别激动,休息一下呗&#8230;</string>

    <string name="loading_image">正在准备图片...</string>
    <string name="register_done_hint">完成</string>
    <string name="register_man_hint">男士</string>
    <string name="register_female_hint">女士</string>
    <string name="retrieve_pwd_step_hint">下一步</string>
    <string name="retrieve_pwd_email_label_one">邮箱用户找回密码，请</string>
    <string name="retrieve_pwd_email_label"><a>点击这里</a></string>
    <string name="reset_pwd_hint">请输入至少六位新密码</string>
    <string name="register_pwd_hint">请输入至少六位数密码</string>
    <string name="register_pwd2_hint">请再次输入密码</string>
    <string name="reset_pwd_submit">确认</string>
    <string name="message_pwd_error">密码错误</string>
    <string name="message_username_null">用户名未填写！！！</string>
</resources>
