<?xml version="1.0" encoding="utf-8"?>
<com.sample.andremion.musicplayer.view.InsetsPercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.andremion.music.MusicCoverView
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/album_default"
        android:transitionName="@string/transition_name_cover"
        app:layout_heightPercent="35%"/>

    <View
        android:id="@+id/pane"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignBottom="@+id/pane_anchor"
        android:layout_alignEnd="@+id/pane_anchor"
        android:layout_alignStart="@+id/pane_anchor"
        android:layout_alignTop="@+id/pane_anchor"
        android:background="@color/colorPane"/>

    <LinearLayout
        android:id="@+id/pane_anchor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/cover"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onPaneClick">

        <include
            android:id="@+id/title"
            layout="@layout/song_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:transitionName="@string/transition_name_time" />

            <com.sample.andremion.musicplayer.view.ProgressView
                android:id="@+id/progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/inner_padding"
                android:layout_marginStart="@dimen/inner_padding"
                android:layout_weight="1"
                android:transitionName="@string/transition_name_progress"/>

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:transitionName="@string/transition_name_duration" />

            <Space
                android:id="@+id/fab_placeholder"
                android:layout_width="@dimen/design_fab_size_mini"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/inner_padding"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cover"
        android:gravity="center_vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:transitionGroup="true">


        <!--歌单名称-->
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="My favorites"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

        <!--歌单歌曲数目-->
        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:text="102 songs"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

        <ImageView
            android:id="@+id/options"
            android:layout_width="@dimen/design_fab_size_mini"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:src="@drawable/ic_more_vert_white_24dp"/>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/tracks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/playlist"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/content_list_item" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/play_button_in_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/cover"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/fab_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:onClick="onFabClick"
        android:scaleType="center"
        android:src="@drawable/ic_play_animatable"
        android:transitionName="@string/transition_name_fab"
        app:fabSize="mini"/>

</com.sample.andremion.musicplayer.view.InsetsPercentRelativeLayout>